Update dummy app

--- a/tests/dummy/app/templates/components/todo-item.hbs
+++ b/tests/dummy/app/templates/components/todo-item.hbs
@@ -1,2 +1,6 @@
-<input type='checkbox' checked={{todo.isCompleted}} {{action 'toggleComplete'}}>
+<input
+  type='checkbox'
+  checked={{todo.isCompleted}}
+  {{action onToggle todo.id}}
+>
 {{todo.title}}
